[package]
name = "regex_rust"
version = "0.1.0"
authors = ["Sundeep Routhu <routhusundeep@gmail.com>"]
edition = "2021"

[lib]
name = "myregex"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
pretty_assertions = "1.3.0"